@@ -1,1 +1,1 @@
-| %02(month)/%02(day)/%02(year2) | %-59.59(file) |
+| %02(month)/%02(day)/%02(year2) | %(path)
